wk_taa_taaqa/src/objects/TSM_LeadGeneration_Mapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Defines the field mapping for lead creation from campaign member.</description>
    <fields>
        <fullName>CM_Contact_FieldName__c</fullName>
        <description>Represents the Campaign Member Field Name when converting to Lead from Campaign Member Contact.</description>
        <inlineHelpText>Represents the Campaign Member Field Name when converting to Lead from Campaign Member Contact.</inlineHelpText>
        <label>CM Contact FieldName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_Lead_FieldName__c</fullName>
        <description>Represents the Campaign Member Field Name when converting to Lead from Campaign Member Lead.</description>
        <inlineHelpText>Represents the Campaign Member Field Name when converting to Lead from Campaign Member Lead.</inlineHelpText>
        <label>CM Lead FieldName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Value__c</fullName>
        <description>Default text value to be set for lead field on conversion</description>
        <inlineHelpText>Default text value to be set for lead field on conversion</inlineHelpText>
        <label>Default Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>TSM_LeadGeneration_Mapping</label>
</CustomObject>